--- a/deals.html
+++ b/deals.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Deals - FreshMart</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="http://localhost:3013/lead-collection/68a46a517de9a985300856d5/lead_ads_conversation/script.js"></script>
 </head>
 <body>
     <header>
@@ -43,7 +44,7 @@
         <section class="sidebar-ad">
             <h3>Special Offers Banner</h3>
             <!-- Category Level Ad Placement -->
-            <div class="cutomElemen360x400"></div>
+            <div class="ffrLeadCollectionAds970x250Conversation"></div>
         </section>
     </main>
 
@@ -57,3 +58,4 @@
     </script>
 </body>
 </html>
+
