--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     let script = document.createElement('script');script.src = "http://localhost:3013/web-advertising-slider/68a46a517de9a985300856d5/web_advertising_slider/script.js?hostUrl=" + encodeURIComponent(window.location.href);document.head.appendChild(script);
     </script>
     <script src="http://localhost:3013/lead-collection/68a46a517de9a985300856d5/lead_ads_conversation/script.js"></script>
+    <script src="https://temp.ffr.ai/lead-collection/688a6b839b01f839b97a91d1/lead_ads_conversation/script.js"></script>
 </head>
 <body>
     <header>
@@ -84,4 +85,5 @@
         document.getElementById('currentUrl').textContent = window.location.href;
     </script>
 </body>
+
 </html>
