--- a/groceries.html
+++ b/groceries.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="http://localhost:3013/web-advertisement/68a46a517de9a985300856d5/web_advertising_desktop/script.js"></script>
     <script src="http://localhost:3013/lead-collection/68a46a517de9a985300856d5/lead_ads_conversation/script.js"></script>
+    <script src="https://temp.ffr.ai/lead-collection/688a6b839b01f839b97a91d1/lead_ads_conversation/script.js"></script>
 </head>
 <body>
     <header>
@@ -59,3 +60,4 @@
     </script>
 </body>
 </html>
+
