--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <title>FreshMart - Your Local Grocery Store</title>
     <link rel="stylesheet" href="styles.css">
     <script src="http://localhost:3013/web-advertisement/68a46a517de9a985300856d5/web_advertising_desktop/script.js"></script>
-    <script>
-    let script = document.createElement('script');script.src = "http://localhost:3013/web-advertising-slider/68a46a517de9a985300856d5/web_advertising_slider/script.js?hostUrl=" + encodeURIComponent(window.location.href);document.head.appendChild(script);
-    </script>
     <script src="http://localhost:3013/lead-collection/68a46a517de9a985300856d5/lead_ads_conversation/script.js"></script>
     <script src="https://temp.ffr.ai/lead-collection/688a6b839b01f839b97a91d1/lead_ads_conversation/script.js"></script>
+    <script>let script = document.createElement('script');script.src = "https://temp.ffr.ai/web-advertising-slider/688a6b839b01f839b97a91d1/web_advertising_slider/script.js?hostUrl=" + encodeURIComponent(window.location.href);document.head.appendChild(script);</script>
 </head>
 <body>
     <header>
@@ -87,3 +85,4 @@
 </body>
 
 </html>
+
