--- a/groceries.html
+++ b/groceries.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groceries - FreshMart</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="http://localhost:3013/web-advertisement/68a46a517de9a985300856d5/web_advertising_desktop/script.js"></script>
+    <script src="https://temp.ffr.ai/web-advertisement/688a6b839b01f839b97a91d1/web_advertising_desktop/script.js"></script>
     <script src="http://localhost:3013/lead-collection/68a46a517de9a985300856d5/lead_ads_conversation/script.js"></script>
     <script src="https://temp.ffr.ai/lead-collection/688a6b839b01f839b97a91d1/lead_ads_conversation/script.js"></script>
 </head>
@@ -60,4 +60,5 @@
     </script>
 </body>
 </html>
+
 
