--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="http://localhost:3013/web-advertisement/68a46a517de9a985300856d5/web_advertising_desktop/script.js"></script>
     <script src="http://localhost:3013/lead-collection/68a46a517de9a985300856d5/lead_ads_conversation/script.js"></script>
     <script src="https://temp.ffr.ai/lead-collection/688a6b839b01f839b97a91d1/lead_ads_conversation/script.js"></script>
+  <script src="https://temp.ffr.ai/web-advertisement/68b9fa9ed7e8b473da5cd6ac/web_advertising_desktop/script.js"></script>
     <script>let script = document.createElement('script');script.src = "https://temp.ffr.ai/web-advertising-slider/688a6b839b01f839b97a91d1/web_advertising_slider/script.js?hostUrl=" + encodeURIComponent(window.location.href);document.head.appendChild(script);</script>
 </head>
 <body>
@@ -70,7 +71,8 @@
         <section class="banner-ad">
             <h3>Homepage Banner Ad</h3>
             <!-- Universal/Brand Level Ad Placement -->
-            <div class="ffrLeadCollectionAds970x250Conversation"></div>
+<!--             <div class="ffrLeadCollectionAds970x250Conversation"></div> -->
+            <div class="ffrWebAdvertising970x250Desktop"></div>
         </section>
     </main>
 
@@ -85,5 +87,6 @@
 </body>
 
 </html>
+
 
 
