--- a/groceries.html
+++ b/groceries.html
@@ -8,6 +8,7 @@
     <script src="https://temp.ffr.ai/web-advertisement/688a6b839b01f839b97a91d1/web_advertising_desktop/script.js"></script>
     <script src="http://localhost:3013/lead-collection/68a46a517de9a985300856d5/lead_ads_conversation/script.js"></script>
     <script src="https://temp.ffr.ai/lead-collection/688a6b839b01f839b97a91d1/lead_ads_conversation/script.js"></script>
+    <script src="https://temp.ffr.ai/lead-collection/68b9fa9ed7e8b473da5cd6ac/lead_ads_desktop/script.js"></script>
 </head>
 <body>
     <header>
@@ -39,7 +40,8 @@
             <!-- Category Level Ad Placement -->
             <div class="ad-container">
                 <h3>Groceries Category Ad</h3>
-                <div class="ffrWebAdvertising300x250Desktop"></div>
+<!--                 <div class="ffrWebAdvertising300x250Desktop"></div> -->
+                <div class="ffrLeadCollectionAds970x250Desktop"></div>
             </div>
         </section>
 
@@ -60,5 +62,6 @@
     </script>
 </body>
 </html>
+
 
 
