--- a/fresh-produce.html
+++ b/fresh-produce.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="http://localhost:3013/lead-collection/68a46a517de9a985300856d5/lead_ads_conversation/script.js"></script>
     <script src="https://temp.ffr.ai/lead-collection/688a6b839b01f839b97a91d1/lead_ads_conversation/script.js"></script>
+    <script src="https://temp.ffr.ai/web-advertisement/68b9fa9ed7e8b473da5cd6ac/web_advertising_mobile/script.js"></script>
 </head>
 <body>
     <header>
@@ -45,7 +46,8 @@
         <section class="sidebar-ad">
             <h3>Produce Department Promotion</h3>
             <!-- Category Level Ad Placement -->
-            <div class="ffrLeadCollectionAds970x250Conversation"></div>
+<!--             <div class="ffrLeadCollectionAds970x250Conversation"></div> -->
+            <div class="ffrWebAdvertising320x150Mobile"></div>
         </section>
     </main>
 
@@ -60,3 +62,4 @@
 </body>
 
 </html>
+
