--- a/fresh-produce.html
+++ b/fresh-produce.html
@@ -47,7 +47,9 @@
             <h3>Produce Department Promotion</h3>
             <!-- Category Level Ad Placement -->
 <!--             <div class="ffrLeadCollectionAds970x250Conversation"></div> -->
-            <div class="ffrWebAdvertising320x150Mobile"></div>
+<!--             <div class="ffrWebAdvertising320x150Mobile"></div> -->
+                 <div class="ffrWebAdvertising320x480Mobile"></div>
+ 
         </section>
     </main>
 
@@ -62,4 +64,5 @@
 </body>
 
 </html>
+
 
